Fixed overflow-x v2

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -962,7 +962,6 @@ body {
                 border-radius: 8px;
                 object-fit: cover;
             }
-            &.restrict img{width: auto;}
         }
         .section-note{
             font-size: smaller;
